Fixed cropped Events Grid mobile view, applied transition to links

--- a/app/webroot/css/kickoff.app.css
+++ b/app/webroot/css/kickoff.app.css
@@ -48,8 +48,9 @@
   padding: 0.5em;
   margin: 0 0 0.2em;
   text-align: center;
+  transition: 0.3s all ease;
 }
-/* line 42, ../sass/_components/_calendars.scss */
+/* line 43, ../sass/_components/_calendars.scss */
 .calendar td .event a:hover, .calendar td .event a:focus {
   background: rgba(255, 40, 40, 0.7);
 }
@@ -58,7 +59,7 @@
   .calendar {
     /* Hide table headers (but not display: none;, for accessibility) */
   }
-  /* line 56, ../sass/_components/_calendars.scss */
+  /* line 57, ../sass/_components/_calendars.scss */
   .calendar table,
   .calendar thead,
   .calendar tbody,
@@ -67,40 +68,40 @@
   .calendar tr {
     display: block;
   }
-  /* line 61, ../sass/_components/_calendars.scss */
+  /* line 62, ../sass/_components/_calendars.scss */
   .calendar thead tr {
     position: absolute;
     top: -9999px;
     left: -9999px;
   }
-  /* line 67, ../sass/_components/_calendars.scss */
+  /* line 68, ../sass/_components/_calendars.scss */
   .calendar td {
     /* Behave  like a "row" */
     border: none;
     border-bottom: 1px solid #eee;
     height: auto;
+    min-height: 4.5rem;
     overflow: hidden;
     padding-left: 0;
     text-align: left;
     white-space: normal;
     width: 100%;
   }
-  /* line 78, ../sass/_components/_calendars.scss */
+  /* line 80, ../sass/_components/_calendars.scss */
   .calendar td .date {
     text-align: left;
     top: 2.5rem;
     left: 0;
     width: 1em;
   }
-  /* line 85, ../sass/_components/_calendars.scss */
+  /* line 87, ../sass/_components/_calendars.scss */
   .calendar td:before {
     content: attr(data-day);
     color: rgba(0, 0, 0, 0.05);
     letter-spacing: 0.2rem;
-    margin: 0 0 0 1rem;
     text-transform: uppercase;
   }
-  /* line 93, ../sass/_components/_calendars.scss */
+  /* line 95, ../sass/_components/_calendars.scss */
   .calendar td .event {
     margin: 0 0 0 6em;
   }
